crates/swc/tests/tsc-references/classExtendsItselfIndirectly_es5.1.normal.js
import * as swcHelpers from "@swc/helpers";
var C = /*#__PURE__*/ function(E1) {
    "use strict";
    swcHelpers.inherits(C, E1);
    var _super = swcHelpers.createSuper(C);
    function C() {
        swcHelpers.classCallCheck(this, C);
        return _super.apply(this, arguments);
    }
    return C;
} // error
(E);
var D = /*#__PURE__*/ function(C) {
    "use strict";
    swcHelpers.inherits(D, C);
    var _super = swcHelpers.createSuper(D);
    function D() {
        swcHelpers.classCallCheck(this, D);
        return _super.apply(this, arguments);
    }
    return D;
}(C);
var E = /*#__PURE__*/ function(D) {
    "use strict";
    swcHelpers.inherits(E, D);
    var _super = swcHelpers.createSuper(E);
    function E() {
        swcHelpers.classCallCheck(this, E);
        return _super.apply(this, arguments);
    }
    return E;
}(D);
var C2 = /*#__PURE__*/ function(E21) {
    "use strict";
    swcHelpers.inherits(C2, E21);
    var _super = swcHelpers.createSuper(C2);
    function C2() {
        swcHelpers.classCallCheck(this, C2);
        return _super.apply(this, arguments);
    }
    return C2;
} // error
(E2);
var D2 = /*#__PURE__*/ function(C2) {
    "use strict";
    swcHelpers.inherits(D2, C2);
    var _super = swcHelpers.createSuper(D2);
    function D2() {
        swcHelpers.classCallCheck(this, D2);
        return _super.apply(this, arguments);
    }
    return D2;
}(C2);
var E2 = /*#__PURE__*/ function(D2) {
    "use strict";
    swcHelpers.inherits(E2, D2);
    var _super = swcHelpers.createSuper(E2);
    function E2() {
        swcHelpers.classCallCheck(this, E2);
        return _super.apply(this, arguments);
    }
    return E2;
}(D2);
